--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,25 @@
-bcrypt==3.2.0
-beautifulsoup4==4.8.0
-certifi==2019.6.16
-cffi==1.14.4
-chardet==3.0.4
-Click==7.0
-Flask==1.1.1
-Flask-Bcrypt==0.7.1
-Flask-Caching==1.9.0
-Flask-Login==0.5.0
-Flask-PyMongo==2.3.0
-idna==2.8
-itsdangerous==1.1.0
+bcrypt
+beautifulsoup4
+certifi
+cffi
+chardet
+Click
+Flask
+Flask-Bcrypt
+Flask-Caching
+Flask-Login
+Flask-PyMongo
+idna
+itsdangerous
 Jinja2
 lxml
-MarkupSafe==1.1.1
-pycparser==2.20
-pymongo==3.8.0
-python-dateutil==2.8.0
-pytz==2019.2
-requests==2.22.0
-six==1.12.0
-soupsieve==1.9.2
+MarkupSafe
+pycparser
+pymongo
+python-dateutil
+pytz
+requests
+six
+soupsieve
 urllib3
-Werkzeug==0.15.5
+Werkzeug
